test/analyzer/input_programs/invalid_programs/program13.tea
x := 1
y := 10

# valid range with ints
x..y

# invalid since end of range
# is not an int
1...true